ui: Fix content-box overflow (content-box is evviill)

--- a/ui/less/commandbox.less
+++ b/ui/less/commandbox.less
@@ -1,9 +1,9 @@
 
 .commandbox {
     padding: 5px;
-    height: 1.1em;
+    height: calc(~"1.1em + 10px");
 
-    box-sizing: content-box;
+    box-sizing: border-box;
 
     background-color: (@background * 1.5);
     width: 100%;
